# pi05_evaluation

./: .gitignore  README.md  real_world_visual_planning.code-workspace
deoxys_vision/deoxys_vision/networking/: camera_redis_interface.py
real_world_visual_planning/: .gitignore  .gitmodules  README.md  actuate_robot.py  demo.py  panda_log.py  perception_client_example.py  primitives_demo.py  push_forward_demo.py  push_right_demo.py  setup.py  usb_camera_to_redis.py
real_world_visual_planning/configs/: tuned-osc-yaw-controller.yml
real_world_visual_planning/data/: cam0_data.pkl  cam1_data.pkl
real_world_visual_planning/data/calibration_results/: cam0_calibration.npz  cam0_calibration_grid_search.npz  cam1_calibration.npz  cam1_calibration_grid_search.npz
real_world_visual_planning/data/camera_alignments/: cam0_to_cam1.npy  cam1_to_cam0.npy
real_world_visual_planning/frankapanda/: __init__.py  controller.py  motionplanner.py
real_world_visual_planning/frankapanda/calibration/: align_multiple_cameras.py  collect_data.py  (+6 more)
real_world_visual_planning/robo_utils/: README.md  pyproject.toml
real_world_visual_planning/robo_utils/robo_utils/: __init__.py  conversion_utils.py  sample_mesh_points.py  wandb_helpers.py
real_world_visual_planning/robo_utils/robo_utils/visualization/: plotting.py  point_cloud_structures.py  pytorch3d_utils.py
real_world_visual_planning/scripts/: align_cameras.py  images_to_gif.py  osc_control.py
robotiq_deoxys_control/deoxys/: requirements.txt  robotiqComModBus.py  robotiqComModBusUSB.py  robotiq_2f_gripper.py  test.py  test2.py
(+23 files in other folders)
